# kuaro

./: .gitignore
2018_tsukuba_challenge/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
2018_tsukuba_challenge/command/: rinpu_bag_filter.txt~
2018_tsukuba_challenge/include/2018_tsukuba_challenge/: Robot_goals_decider.hpp  param_class.hpp  stdafx.hpp
2018_tsukuba_challenge/launch/: FFF_3Dto2D.launch~  GGG2018make_map.launch~  GGG2018make_map_3Dto2D.launch~  Robot_goals_decider.launch  Robot_goals_decider.launch~  bag_play.launch  bag_play.launch~  camera_GPS_data.launch  camera_GPS_data.launch~  experiment_for_move_base.launch~  for_ex.launch  gmapping_off_2017.launch~  gps_rosbag.launch~  kame.launch~  kuaro_slam.launch  map_save.launch  map_save.launch~  map_save_last.launch  map_save_last.launch~  person_navigation.launch~  person_navigation_hidari.launch  person_navigation_hidari.launch~  person_navigation_migi.launch  person_navigation_park.launch  person_navigation_park.launch~  rodec_slam_amcl.launch  sim_kobuki_teb.launch  sim_person_navigation.launch  sim_person_navigation.launch~  sim_person_navigation_fake_obstacle.launch  sim_person_navigation_fake_obstacle.launch~  testKuaro_slam.launch  testKuaro_slam.launch~  test_xxcamera_get_final.launch  test_zz_Tsukuba_Challenge_2018_teb.launch  test_zz_Tsukuba_Challenge_2018_teb.launch~  uway_pointmaker.launch  uway_pointmaker.launch~  wang_fuku_research.launch  wang_fuku_research.launch~  (+13 more)
2018_tsukuba_challenge/map/: 10_26_jikkentou_0_10.yaml~  hoge.yaml~  icp_ex_gimp.yaml~  jikkentou2_2017_07_22_gimp.yaml~  jikkentou30.yaml~  jikkentou5gimp.yaml~  jikkentou_08_31.yaml~  jikkentou_08_31_0.8.yaml~  jikkentou_08_31_gimp.yaml~  kandai_challenge_07_07_1.yaml~  rouka_2016.yaml~  rouka_3d.yaml~  tsukuba_velodyne2d_1014.yaml~  tsukuba_velodyne2d_1014_2_0_10_2_sato_gimp.yaml~  tsukuba_velodyne2d_1014_2_2_ono_gimp.yaml~  tsukuba_velodyne2d_1014_2_2_ono_gimp2.yaml~  tsukuba_velodyne2d_1014_gimp.yaml~
2018_tsukuba_challenge/param/: base_global_planner_params.yaml~  costmap_common_global_params.yaml~  move_base_params.yaml
2018_tsukuba_challenge/param_sim/: costmap_common_global_params_aki.yaml~  costmap_common_local_params.yaml~  move_base_params.yaml~
2018_tsukuba_challenge/param_sim/param_carrot/: base_local_planner_params.yaml  costmap_common_global_params.yaml~  costmap_common_local_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  recovery_behaviors.yaml
2018_tsukuba_challenge/param_sim/param_teb/: local_costmap_params.yaml  move_base_params.yaml
2018_tsukuba_challenge/param_teb/: clear_costmap_recovery.yaml  clear_costmap_recovery.yaml~  costmap_common_local_params_sim.yaml  move_base_params.yaml  move_base_params.yaml~  rotate_recovery.yaml  test_teb.yaml~
2018_tsukuba_challenge/param_teb/#backup/: base_local_planner_params.yaml  costmap_common_local_params_sim.yaml  local_costmap_params.yaml  move_base_params.yaml
2018_tsukuba_challenge/param_teb_2018_botu/: base_local_planner_params_gps.yaml~  costmap_common_global_params.yaml  costmap_common_local_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml~  waypoint.txt~
2018_tsukuba_challenge/param_teb_origin/: global_costmap_params.yaml~  local_costmap_params.yaml~
2018_tsukuba_challenge/param_teb_test/: 2014_10_5_rouka.yaml~  base_global_planner_params .yaml~  costmap_common_global_params.yaml  costmap_common_local_params.yaml
2018_tsukuba_challenge/rviz/: octomap_server_2017.rviz  sensor_get.rviz  waypoint_maker_auto.rviz
2018_tsukuba_challenge/script/: bag_cut_tool.sh  uway.py~
2018_tsukuba_challenge/src/fake_obstacle_2018/: fake_obstacle.hpp
2018_tsukuba_challenge/src/person_manager_2018/: main.cpp  person_manager.cpp  person_manager.hpp  stdafx.hpp
2018_tsukuba_challenge/src/person_manager_sim_2018/: main.cpp  person_manager.cpp
2018_tsukuba_challenge/src/uway_pointmaker_2018/: uway_main.cpp
2018_tsukuba_challenge/src/velodyne_detection_2018/: velodyne_detection.cpp
2018_tsukuba_challenge/src/waypoint_maker_auto_2018/: main.cpp
2018_tsukuba_challenge/waypoint/: 2017_08_31_camera_all_1.bag_suc1.txt~  2017_08_31_camera_all_1.bag_suc1_honban.txt~  2017_09_18_icp_jikkentou.txt~  2017_09_18_icp_jikkentou_memo.txt~  jikkentou2.txt~  jikkentou30.txt~  jikkentou_08_31.txt~  jikkentou_09_03.txt~  kandai_challenge_1.txt~  kandai_challenge_1_out.txt~
2019_autonomous_mobile_robot/: CMakeLists.txt  package.xml  package.xml~
2019_autonomous_mobile_robot/include/2018_tsukuba_challenge/: abort_move.hpp  scan_class.hpp
2019_autonomous_mobile_robot/launch/: ama_main.launch  ama_main.launch~  autonomous.launch~  data_gather.launch~  gmapping_off_first.launch  gmapping_off_first.launch~  map_save.launch  play.launch  play.launch~  uway_pointmaker.launch  waypoint_maker_auto.launch~
2019_autonomous_mobile_robot/launch/main_launch/: ama_main_core.launch  autonomous.launch~  autonomous_core (origen).launch  autonomous_core.launch  autonomous_core.launch~  data_gather.launch~  data_gather_core.launch  gmapping_off_first.launch~  gmapping_off_first_core.launch  map_save.launch~  map_save_core.launch~  person_navigation.launch~  person_navigation_core.launch  person_navigation_core.launch~  uway_pointmaker.launch~  uway_pointmaker_core.launch  uway_pointmaker_core.launch~  waypoint_maker_auto.launch~  waypoint_maker_auto_core.launch
2019_autonomous_mobile_robot/params/param/: costmap_common_local_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml~
2019_autonomous_mobile_robot/params/param_f/: default_param.yaml  default_param.yaml~
2019_autonomous_mobile_robot/params/param_mwf/: base_local_planner_params.yaml  base_local_planner_params.yaml~  move_base_params.yaml
2019_autonomous_mobile_robot/rviz/: calib_get.rviz  gmapping.rviz  map_compare.rviz  move_base_2017.rviz~  move_base_2018.rviz  move_base_2018_sim.rviz  people.rviz
2019_autonomous_mobile_robot/script/: make_dir.py  make_dir.py~  rinpu_bag_filter.txt~
okatech_kuaro/: CMakeLists.txt~  package.xml~
(+230 files in other folders)
